close serversocket